--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
+        "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^2.6",
         "tymon/jwt-auth": "^1.0"
     },
