--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/ui": "2.4",
         "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^2.6",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "webstronauts/unpoly": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
