--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "2.4",
+        "league/flysystem-aws-s3-v3": "*",
         "maatwebsite/excel": "^3.1",
         "orangehill/iseed": "^2.6",
+        "spatie/laravel-backup": "*",
         "tymon/jwt-auth": "^1.0",
         "webstronauts/unpoly": "^2.0"
     },
